--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -3,7 +3,10 @@
 <head>
     <title>Contact Piclos</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" href="stylesheet.css">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -39,10 +42,14 @@
             </div>
         </div>
 
+<div>
 
+
+</div>
 
 
 
     </section>
+
 </body>
 </html>
