--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -40,11 +40,14 @@
                      class="row border-bottom"
                      th:classappend="${contact.name} == (${selected} != null ? ${selected.name} : '') ? 'selected' : ''">
                     <a th:href="@{/home(id=${contact.id})}">
-                        <p th:utext="${contact.name}"
-                           class="ml-4 mt-3"
-                           th:classappend="${contact.id} == (${selected} != null ? ${selected.id} : '') ? 'text-white' : 'text-primary'">
-                            Full Name
-                        </p>
+                        <div class="pl-4 ml-4 col-12">
+                            <p th:utext="${contact.name}"
+                               class="ml-4 mt-3"
+                               th:classappend="${contact.id} == (${selected} != null ? ${selected.id} : '') ? 'text-white' : 'text-primary'">
+                                Full Name
+                            </p>
+                        </div>
+
                     </a>
                 </div>
             </div>
