--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -3,14 +3,13 @@
 <head>
     <title>Contact Piclos</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <style>
 
     .selected{
         background-color: #dfe6e9;
     }
-
 </style>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -21,7 +20,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/home">Home<span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="/add">Add Contact <span class="sr-only">(current)</span></a>
                 </li>
 
@@ -36,28 +35,25 @@
     <section class="mb-4 mt-4">
         <div class="row h-100">
             <div class="col-12">
-                <h2 class="text-center">New Contact</h2>
+                <h2 class="text-center">Edit <span th:text="${contact.name}"></span></h2>
                 <div class="row">
                     <div class="col-4 offset-4 mt-4">
-                        <form th:action="@{/add}" method="post">
+                        <form th:action="@{/edit}" th:object="${contact}" method="post">
                             <div class="form-group">
                                 <label>FullName</label>
-                                <input type="text" class="form-control" th:field="${contact.name}" placeholder="John Doe" required="required">
+                                <input type="text" class="form-control" th:field="*{name}" placeholder="John Doe" required="required">
+                                <td th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</td>
                             </div>
                             <div class="form-group">
                                 <label>Email address</label>
-                                <input type="email" class="form-control" th:field="${contact.trymail}" placeholder="john.doe@mail.com">
+                                <input type="email" class="form-control" th:field="*{trymail}" placeholder="john.doe@mail.com">
+                                <td th:if="${#fields.hasErrors('trymail')}" th:errors="*{trymail}">Age Error</td>
                             </div>
-                            <div class="form-group">
-                                <label>Address</label>
-                                <input type="text" class="form-control" th:field="${address.street}" placeholder="38 rue Ledru Rollin">
-                                <input type="text" class="form-control" th:field="${address.city}" placeholder="Reims 51100">
-                                <input type="text" class="form-control" th:field="${address.country}" placeholder="France">
-                            </div>
-                            <button type="submit" class="btn btn-primary w-100">Create</button>
+                            <button type="submit" class="btn btn-primary w-100">Save</button>
                         </form>
                     </div>
                 </div>
+
             </div>
         </div>
 
