--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,38 +6,49 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <style>
+    .avatar {
+        vertical-align: middle;
+        width: 10%;
+        border-radius: 50%;
+    }
 
     .selected{
         background-color: rgba(243, 240, 243, 0.6);
     }
 </style>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div style="display: flex;justify-content: flex-start;align-content: center">
+        <img src="https://zupimages.net/up/22/10/etfe.png" alt="Avatar" class="avatar">
         <a class="navbar-brand" href="#">Contact Piclos</a>
+    </div>
 
-        <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/home">Home<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/add">Add Contact <span class="sr-only">(current)</span></a>
-                </li>
+    <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="/home">Home<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/add">Add Contact <span class="sr-only">(current)</span></a>
+            </li>
 
-            </ul>
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="/endsession">Deconnexion<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <div th:switch="${session['valueSessionName']}">
-                        <p th:case="null">None</p>
-                        <p th:case="*" th:utext="${session['valueSessionName']}"><p>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </nav>
+        </ul>
+        <ul class="navbar-nav">
+            <li class="nav-item" style="display: flex; justify-content: center;align-content: center">
+                <div th:switch="${session['valueSessionName']}" style="display: flex; align-items: center;">
+                    <p th:case="null">None</p>
+                    <p th:case="*" th:utext="${session['valueSessionName']}" style="padding: 0!important;margin: 0!important;display: flex;
+    align-items: center;"><p>
+                </div>
+            </li>
+            <li class="nav-item" style="display: flex; justify-content: center;align-content: center">
+                <a class="nav-link" href="/endsession">Deconnexion<span class="sr-only">(current)</span></a>
+            </li>
+
+        </ul>
+    </div>
+</nav>
     <section class="mb-4 mt-4">
         <div class="row h-100">
             <div class="col-6 h-100">
