--- a/src/main/resources/templates/adminPanel.html
+++ b/src/main/resources/templates/adminPanel.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Connexion</title>
+    <title>Ajout de Users</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -21,20 +21,56 @@
         <img src="https://zupimages.net/up/22/10/etfe.png" alt="Avatar" class="avatar">
         <a class="navbar-brand" href="#">Contact Piclos</a>
     </div>
+
+    <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="/home">Home<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/add">Add Contact <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item"th:switch="${session['role']}" >
+                <a th:case="null"></a>
+                <a class="nav-link" th:case="*" href="/adminPanel">Panel Admin</a>
+            </li>
+        </ul>
+        <ul class="navbar-nav">
+            <li class="nav-item" style="display: flex; justify-content: center;align-content: center">
+                <div th:switch="${session['valueSessionName']}" style="display: flex; align-items: center;">
+                    <p th:case="null">None</p>
+                    <p th:case="*" th:utext="${session['valueSessionName']}" style="padding: 0!important;margin: 0!important;display: flex;
+    align-items: center;"><p>
+                </div>
+            </li>
+            <li class="nav-item" style="display: flex; justify-content: center;align-content: center">
+                <a class="nav-link" href="/endsession">Deconnexion<span class="sr-only">(current)</span></a>
+            </li>
+
+
+        </ul>
+    </div>
 </nav>
 
 <div style="display:flex;justify-content: center;align-content: center;margin-top: 50px">
-    <div style="width: 300px;display: flex;justify-content: center;flex-direction: column;">
+    <div style="width: 300px;display: flex;justify-content: flex-start;flex-direction: column;margin: 100px">
         <div style="font-size: xx-large;margin-bottom: 20px;display: flex;align-items: center;justify-content: center;">Création d'utilisateur </div>
-        <form action="#" th:action="@{/login}" th:object="${user}" method="post">
-            <p>Login : <input required class="form-control" type="text" th:field="*{login}"/></p>
-            <p>Password : <input required type="text" class="form-control" th:field="*{password}"/></p>
+        <form action="#" th:action="@{/adminPanel}"  method="post">
+            <p>Login : <input required class="form-control" type="text" th:field="${user.login}"/></p>
+            <p>Password : <input required type="text" class="form-control" th:field="${user.password}"/></p>
             <div style="display: flex; justify-content: flex-end">
                 <button type="reset" class="btn btn-outline-secondary" style="margin-right: 30px">Reset</button>
                 <button type="submit" class="btn btn-outline-success">Submit</button>
             </div>
         </form>
     </div>
+    <div style="width: 300px;display: flex;justify-content: flex-start;flex-direction: column;margin: 100px">
+        <div style="font-size: xx-large;margin-bottom: 20px;display: flex;align-items: center;justify-content: center;width: max-content">Supprimer tout les utilisateur</div>
+        <a th:href="@{/deleteAllUser}">
+            <button class="btn btn-outline-secondary"><i class="fa fa-trash"></i>Supprimer </button>
+        </a>
+    </div>
+
 </div>
 
 </body>
