--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -33,11 +33,10 @@
             <li class="nav-item">
                 <a class="nav-link" href="/add">Add Contact <span class="sr-only">(current)</span></a>
             </li>
-            <li th:switch="${session['role']}" class="nav-item">
-                <a th:case="null">None</a>
-                <a th:case="admin" href="/adminPanel">Panel Admin</a>
+            <li class="nav-item"th:switch="${session['role']}" >
+                <a th:case="null"></a>
+                <a class="nav-link" th:case="*" href="/adminPanel">Panel Admin</a>
             </li>
-
         </ul>
         <ul class="navbar-nav">
             <li class="nav-item" style="display: flex; justify-content: center;align-content: center">
@@ -144,10 +143,6 @@
                 </div>
             </div>
         </div>
-
-
-
-
 
     </section>
 </body>
