--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -2,10 +2,75 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Va t'en</title>
+    <title>Erreur</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
+<style>
+    .tourne {
+        transform: rotate(-45deg);
+
+    }
+    .center {
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+
+    }
+    .avatar {
+        vertical-align: middle;
+        width: 10%;
+        border-radius: 50%;
+    }
+</style>
 <body>
-<img src="../assets/1200px-Emojione_1F415.svg.png" width="1200" height="1200" alt="">
-<h1>Clique sur le petit os, pour retourner à la niche</h1>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div style="display: flex;justify-content: flex-start;align-content: center">
+        <img src="https://zupimages.net/up/22/10/etfe.png" alt="Avatar" class="avatar">
+        <a class="navbar-brand" href="#">Contact Piclos</a>
+    </div>
+
+    <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="/home">Home<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/add">Add Contact <span class="sr-only">(current)</span></a>
+            </li>
+
+        </ul>
+        <ul class="navbar-nav">
+            <li class="nav-item" style="display: flex; justify-content: center;align-content: center">
+                <div th:switch="${session['valueSessionName']}" style="display: flex; align-items: center;">
+                    <p th:case="null">None</p>
+                    <p th:case="*" th:utext="${session['valueSessionName']}" style="padding: 0!important;margin: 0!important;display: flex;
+    align-items: center;">
+                    <p>
+                </div>
+            </li>
+            <li class="nav-item" style="display: flex; justify-content: center;align-content: center">
+                <a class="nav-link" href="/endsession">Deconnexion<span class="sr-only">(current)</span></a>
+            </li>
+
+        </ul>
+    </div>
+</nav>
+
+<div style="display:flex;justify-content: center;align-content: center;margin-top: 50px">
+    <div style="width: 300px;display: flex;justify-content: center;flex-direction: column;">
+        <div style="font-size: xx-large;margin-bottom: 20px;display: flex;align-items: center;justify-content: center;">
+            Erreur...
+        </div>
+        <div class="center" style="flex-direction: column">
+            <img src="https://zupimages.net/up/22/10/be8p.png" width="200" alt="">
+            <h5 style="margin: 20px;width: max-content;">Clique sur le petit os, pour retourner à la page d'accueil</h5>
+            <a href="/home">
+                <img src="https://zupimages.net/up/22/10/7dxr.png" width="80" class="tourne" alt=""></a>
+        </div>
+    </div>
+</div>
 </body>
 </html>
