--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <img src="../assets/1200px-Emojione_1F415.svg.png" width="1200" height="1200" alt="">
-<h1>Clique sur le petit os, pour retourner à la niche</h1>
+<h1>Clique sur le petit os, pour retourner à la nichf</h1>
 </body>
 </html>
