--- a/src/main/resources/templates/addMail.html
+++ b/src/main/resources/templates/addMail.html
@@ -30,10 +30,14 @@
             <li class="nav-item active">
                 <a class="nav-link" href="/home">Home<span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/add">Add Contact <span class="sr-only">(current)</span></a>
+            <li class="nav-item"th:switch="${session['role']}" >
+                <a th:case="null" class="nav-link" href="/add">Add Contact <span class="sr-only">(current)</span></a>
+                <a th:case="*"></a>
             </li>
-
+            <li class="nav-item"th:switch="${session['role']}" >
+                <a th:case="null"></a>
+                <a class="nav-link" th:case="*" href="/adminPanel">Panel Admin</a>
+            </li>
         </ul>
         <ul class="navbar-nav">
             <li class="nav-item" style="display: flex; justify-content: center;align-content: center">
