--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -37,10 +37,14 @@
             <li class="nav-item active">
                 <a class="nav-link" href="/home">Home<span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/add">Add Contact <span class="sr-only">(current)</span></a>
+            <li class="nav-item"th:switch="${session['role']}" >
+                <a th:case="null" class="nav-link" href="/add">Add Contact <span class="sr-only">(current)</span></a>
+                <a th:case="*"></a>
             </li>
-
+            <li class="nav-item"th:switch="${session['role']}" >
+                <a th:case="null"></a>
+                <a class="nav-link" th:case="*" href="/adminPanel">Panel Admin</a>
+            </li>
         </ul>
         <ul class="navbar-nav">
             <li class="nav-item" style="display: flex; justify-content: center;align-content: center">
@@ -68,7 +72,8 @@
             <img src="https://zupimages.net/up/22/10/be8p.png" width="200" alt="">
             <h5 style="margin: 20px;width: max-content;">Clique sur le petit os, pour retourner à la page d'accueil</h5>
             <a href="/home">
-                <img src="https://zupimages.net/up/22/10/7dxr.png" width="80" class="tourne" alt=""></a>
+                <img src="https://zupimages.net/up/22/10/7dxr.png" width="80" class="tourne" alt="">
+            </a>
         </div>
     </div>
 </div>
