ᓚᘏᗢ Ajout message Erreur

--- a/src/main/resources/templates/addMail.html
+++ b/src/main/resources/templates/addMail.html
@@ -65,7 +65,12 @@
                         </form>
                     </div>
                 </div>
+                <div th:switch="${messageError}" >
+                    <p th:case="null"></p>
+                    <p th:case="*" th:text="${messageError}" ></p>
+                </div>
             </div>
+
         </div>
 
 
