--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -33,6 +33,10 @@
             <li class="nav-item">
                 <a class="nav-link" href="/add">Add Contact <span class="sr-only">(current)</span></a>
             </li>
+            <li class="nav-item"th:switch="${session['role']}" >
+                <a th:case="null"></a>
+                <a class="nav-link" th:case="*" href="/adminPanel">Panel Admin</a>
+            </li>
         </ul>
         <ul class="navbar-nav">
             <li class="nav-item" style="display: flex; justify-content: center;align-content: center">
@@ -74,6 +78,7 @@
                         </form>
                     </div>
                 </div>
+
             </div>
         </div>
 
