--- a/src/main/resources/templates/adminPanel.html
+++ b/src/main/resources/templates/adminPanel.html
@@ -63,6 +63,7 @@
                 <button type="submit" class="btn btn-outline-success">Submit</button>
             </div>
         </form>
+
     </div>
     <div style="width: 300px;display: flex;justify-content: flex-start;flex-direction: column;margin: 100px">
         <div style="font-size: xx-large;margin-bottom: 20px;display: flex;align-items: center;justify-content: center;width: max-content">Supprimer tout les utilisateur</div>
@@ -72,6 +73,9 @@
     </div>
 
 </div>
-
+<div th:switch="${messageError}" >
+    <p th:case="null"></p>
+    <p th:case="*" th:text="${messageError}" ></p>
+</div>
 </body>
 </html>
