--- a/src/main/resources/templates/adminPanel.html
+++ b/src/main/resources/templates/adminPanel.html
@@ -73,8 +73,8 @@
         </a>
     </div>
 
-</div>
-<div th:switch="${messageError}" >
+
+</div> <div class="col-4 offset-4 mt-4" th:switch="${messageError}" >
     <p th:case="null"></p>
     <p th:case="*" th:text="${messageError}" ></p>
 </div>
